--- a/index.html
+++ b/index.html
@@ -30,14 +30,19 @@ mscray1@student.gsu.edu <br>
     	<td><center>06/17/2015</center></td>
     </tr>
     <tr>
-    	<td><center>Assignment 2</center></td>
-    	<td><center>click here</center></td>
-    	<td><center></center></td>
+    	<td><center>Exercise 1</center></td>
+    	<td><center><a href="exercise1/journal.html">click here</a></center></td>
+    	<td><center>06/24/2015</center></td>
+    </tr>
+        <tr>
+      <td><center>Assignment 2</center></td>
+      <td><center><a href="program1/">click here</a></center></td>
+      <td><center>06/24/2015</center></td>
     </tr>
     <tr>
-    	<td><center>Assignment 3</center></td>
-    	<td><center>click here</center></td>
-    	<td><center></center></td>
+    	<td><center>Project 1</center></td>
+    	<td><center><a href="roulette">click here</a></center></td>
+    	<td><center>06/29/2015</center></td>
     </tr>
     <tr>
         <td><center>Assignment 4</center></td>
