--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@ mscray1@student.gsu.edu <br>
     	<td><center>06/17/2015</center></td>
     </tr>
     <tr>
-    	<td><center>Exercise 1</center></td>
+    	<td><center>Exercise 1 | In Class</center></td>
     	<td><center><a href="exercise1/journal.html">click here</a></center></td>
     	<td><center>06/24/2015</center></td>
     </tr>
-        <tr>
+    <tr>
       <td><center>Assignment 2</center></td>
       <td><center><a href="program1/">click here</a></center></td>
       <td><center>06/24/2015</center></td>
@@ -45,9 +45,38 @@ mscray1@student.gsu.edu <br>
     	<td><center>06/29/2015</center></td>
     </tr>
     <tr>
-        <td><center>Assignment 4</center></td>
-    	<td><center>click here</center></td>
-    	<td><center></center></td>
+        <td><center>PHP | In Class</center></td>
+    	<td><center><a href="php">Click here</a></center></td>
+    	<td><center>06/29/2015</center></td>
+    </tr>
+    <tr>
+        <td><center>Exercise | In Class</center></td>
+      <td><center><a href="assignment3/example.php">Click here</a></center></td>
+      <td><center>07/01/2015</center></td>
+    </tr>
+    <tr>
+    <td><center>Assignment 3</center></td>
+      <td><center><a href="assignment3">Click here</a></center></td>
+      <td><center>07/03/2015</center></td>
+    </tr>
+    <tr>
+    <td><center>Project 2</center></td>
+      <td><center><a href="roulette\Part2">Click here</a></center></td>
+      <td><center>07/08/2015</center></td>
+    </tr>
+    <tr>
+    <td><center>Exercise 3 | In Class</center></td>
+      <td><center><a href="InClass3">Click here</a></center></td>
+      <td><center>07/09/2015</center></td>
+    </tr>
+      <td><center>Assignment 5</center></td>
+      <td><center><a href="assignment5">Click here</a></center></td>
+      <td><center>07/13/2015</center></td>
+    </tr>
+    </tr>
+      <td><center>Project 3</center></td>
+      <td><center><a href="Project3/project3.html">Click here</a></center></td>
+      <td><center>07/20/2015</center></td>
     </tr>
   </tbody>
   <tfoot>
